--- a/src/homePage.html.mustache
+++ b/src/homePage.html.mustache
@@ -8,6 +8,11 @@
         {{#username}}
             Welcome, {{username}}!
         {{/username}}
+
+		<p>
+			I had to use an external network card tethered to my phone in the
+			middle of class so that you could see this. I hope you're happy.
+		</p>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
