--- a/src/home.mustache
+++ b/src/home.mustache
@@ -5,11 +5,11 @@
     <body>
         <h1>Welcome to Lunch Advisor!</h1>
 
-		<dl>
-		{{#places}}
+		{{#suggestion}}
 			{{> place.mustache}}
-		{{/places}}
-		</dl>
+		{{/suggestion}}
+
+		<a href="/?spin=true"><img src="http://www.weentertainseniors.com/photos/753.jpg" /></a>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
