--- a/src/home.mustache
+++ b/src/home.mustache
@@ -9,7 +9,7 @@
 			{{> place.mustache}}
 		{{/suggestion}}
 
-		<a href="/?spin=true"><img src="http://www.weentertainseniors.com/photos/753.jpg" /></a>
+		<div><a href="/?spin=true"><img src="http://www.weentertainseniors.com/photos/753.jpg" /></a></div>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
