fixed templates and Makefile

--- a/src/home.mustache
+++ b/src/home.mustache
@@ -6,7 +6,7 @@
         <h1>Welcome to Lunch Advisor!</h1>
 
 		{{#suggestion}}
-			{{> place.mustache}}
+			{{> choice.mustache}}
 		{{/suggestion}}
 
 		<div><a href="/choose"><img src="http://www.weentertainseniors.com/photos/753.jpg" /></a></div>
