--- a/src/home.mustache
+++ b/src/home.mustache
@@ -9,7 +9,7 @@
 			{{> choice.mustache}}
 		{{/suggestion}}
 
-		<div><a href="/choose"><img src="http://www.weentertainseniors.com/photos/753.jpg" /></a></div>
+		<button><a href="/choose"><img src="http://www.weentertainseniors.com/photos/753.jpg" /></a></button>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
