--- a/src/home.mustache
+++ b/src/home.mustache
@@ -9,7 +9,7 @@
 			{{> choice.mustache}}
 		{{/suggestion}}
 
-		<button><a href="/choose">Random Selection</a></button>
+		<a href="/choose"><button>Random Selection</button></a>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
